Added product name hinting when adding products, added couple unit tests for controller classes, made minor fixes